--- a/cv.tex
+++ b/cv.tex
@@ -317,7 +317,10 @@ ItalicFont = Fontin-Italic.otf
 \section{Achievements}
 \begin{tabular}{rp{13.6cm}}
 % \begin{tabular}{p{3.2cm}p{13.1cm}}
-\textsc{Mar} 2018 & Rank \#1 in Bachelor's Degree in \textsc{Telecommunications Engineering} \\%\href{https://www.ehu.eus/documents/6810447/9245968/2018+03+20+NdP+Entrega+diplomas+2018.pdf/fe66cb16-e67b-8cb0-01ca-73fe373ce92c}{\hfill | \footnotesize Press report}\\
+\textsc{Jan} 2019 & Extraordinary award by University of the Basque Country \\%\href{https://www.ehu.eus/documents/6810447/9245968/2018+03+20+NdP+Entrega+diplomas+2018.pdf/fe66cb16-e67b-8cb0-01ca-73fe373ce92c}{\hfill | \footnotesize Press report}\\
+&\footnotesize{Agreed by governing council and director for outstanding performance in Telecommunications's degree} \\\vspace{-0.05in}&\\
+
+\textsc{Mar} 2018 & \textbf{Rank \#1} in Bachelor's Degree in Telecommunications Engineering \\%\href{https://www.ehu.eus/documents/6810447/9245968/2018+03+20+NdP+Entrega+diplomas+2018.pdf/fe66cb16-e67b-8cb0-01ca-73fe373ce92c}{\hfill | \footnotesize Press report}\\
 &\footnotesize{Achieved highest promotion score of 10/10 | Obtained special honors in 18 courses} \\\vspace{-0.05in}&\\
 
 \textsc{Jul} 2017 & Honors in Bachelor's Thesis with a score of 10 \\% \href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
@@ -326,7 +329,8 @@ ItalicFont = Fontin-Italic.otf
 \vspace{-0.05in}&\\
 
 \textsc{Jul} 2017 & Bizkaia Talentia Program Certification \\% \href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
-& \footnotesize{Participated in the Bizkaia Talentia Program (2016-2017), targeted at undergraduate seniors \newline with an excellent academic record and other skills identified and evaluated by university authorities} \\\vspace{-0.05in}&\\
+\\
+% & \footnotesize{Participated in the Bizkaia Talentia Program (2016-2017), targeted at undergraduate seniors \newline with an excellent academic record and other skills identified and evaluated by university authorities} \\\vspace{-0.05in}&\\
 % & \footnotesize{Targeted at the students who living in Biscay with the highest potential at the three Basque universities} \\&\\
 
 2014 | 2016 | 2017 | 2018 & IDOM Prize for the best academic records in Engineering School\\% \href{https://www.elcorreo.com/bizkaia/alumnos-sobresalientes-20180116213541-nt.html}{\hfill | \footnotesize Press report}\\
