--- a/cv.tex
+++ b/cv.tex
@@ -43,7 +43,8 @@
   }%
 \fi
 
-\geometry{left=0.8in, right=0.8in, top=0.4in, bottom=0.4in}
+\geometry{left=0.8in, right=0.8in, top=0.5in, bottom=0.5in}
+% \geometry{left=0.8in, right=0.8in, top=0.2in, bottom=0.2in}
 
 %Setup hyperref package, and colours for links
 \usepackage{hyperref}
@@ -151,7 +152,10 @@ ItalicFont = Fontin-Italic.otf
 \begin{tabular}{c}
   \hline \\[-0.8em]
   % Professional in DevOps, Cybersecurity and Networking
-  Master of Telecommunications engineer specialized in DevOps, Cybersecurity and Networking
+  % Master of Telecommunications engineer specialized in DevOps, Cybersecurity and Networking
+  Master of Telecommunications Engineer - Enterprise Architect \\
+  Systems Engineering | Cybersecurity | DevOps
+
 \end{tabular}
 \end{center}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -159,6 +163,62 @@ ItalicFont = Fontin-Italic.otf
 % \vspace{-.1in}
 
 \renewcommand{\arraystretch}{0.7}% Tighter
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Experience}
+% \begin{tabular}{rp{13.3cm}}
+\begin{tabular}{p{3.2cm}p{13.1cm}}
+
+ \textsc{Jun 2019 - Present}& \textbf{CCC Information Services} - Chicago (IL)\href{https://www.cccis.com}{\hfill | \footnotesize www.cccis.com}\\
+ & - Systems Engineer, Enterprise Architecture\\ 
+ & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
+ \vspace{-0.1in}
+ \item Leading a business strategy for making a transition into microservices architecture
+ \item Designing and implementing a microservices infrastructure and platform on top of Kubernetes
+ \item Assembling a High Performance Computing environment for AI research
+ \end{itemize}} \vspace{-0.14in} \\ 
+ & - Application Architect, Enterprise Architecture \\
+ \vspace{+0.004in} \\
+
+%  & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
+%  \vspace{-0.1in}
+%  \item Designed and developed software that helped the organization gain awareness and ease education
+%  \end{itemize}} \vspace{-0.09in} \\ 
+
+ \textsc{Feb 2017 - Dec 2018}& \textbf{Bilbao Dynamics} - Bilbao (Spain)\href{https://bilbaodynamics.com/}{\hfill | \footnotesize bilbaodynamics.com}\\
+ & - Engineer and Teacher \\ 
+ & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
+ \vspace{-0.1in}
+ \item Non-profit organization that teaches electronics, robotics, and programming
+ \item Organized multiple courses and volunteered in teaching diverse knowledge areas
+ \item Designed and developed software that helped the organization gain awareness and ease education
+
+ \end{itemize}} \vspace{-0.09in} \\ 
+
+ \textsc{Jun 2016 - Sep 2017}& \textbf{Noisewatch Project Team} - Bilbao (Spain)\href{http://noise.watch}{\hfill | \footnotesize www.noise.watch}\\
+ & - Software Engineer \\
+ & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
+ \vspace{-0.1in}
+ \item Multidisciplinary team hired by city council for reducing noise pollution
+ \item Directed the software team and designed complete solution for the device
+ \item Assisted the hardware team in noise measurement signal processing
+%  \item Achieved new technical skills and trained myself to work in professional engineering environments
+ \end{itemize}} \\
+
+%  \textsc{}& \textbf{Favorite Personal Projects} \\
+%  & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
+%  \vspace{-0.1in}
+%  \item Developed a free video and music downloader with over 3000 users - Maintained online since 2015
+%  \item Programmed a PIC16 microcontroller ROM flasher and memory viewer via serial port
+% %  \item Programmed a PIC16 microcontroller flasher and memory viewer
+% %  \item Designed and developed software that helped the organization gain awareness and ease education
+%  \end{itemize}} \\&\\
+\vspace{-.2in}
+\end{tabular}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+ \vspace{-.3in}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Education}
 % \begin{tabular}{rp{13.6cm}}
@@ -167,8 +227,8 @@ ItalicFont = Fontin-Italic.otf
  \textsc{Aug 2018 - Aug 2019}& \textbf{Master of Information Technology and Management}\\
  & \footnotesize{Illinois Institute of Technology | Chicago (USA)} \\
  %& \footnotesize{Major: Telematics - Computer Science} \\
- & Specialized in Computer and Information Security | Current GPA: 4.0 \\ 
- & \footnotesize{Research Thesis on Kubernetes | Other courses: Cloud Computing (AWS) \& OS Virtualization} \\ &\\[-0.05in]
+ & Specialized in Computer and Information Security | GPA: 4.0 \\ 
+ & \footnotesize{Research Thesis on Kubernetes | Focus on: Cloud Computing \& Virtualization Technologies} \\ &\\[-0.05in]
 %  & \emph{Currently researching on Kubernetes deployments} \\ &\\
 
  \textsc{Oct 2017 - Aug 2019}& \textbf{Master of Telecommunications Engineering}\\
@@ -189,70 +249,59 @@ ItalicFont = Fontin-Italic.otf
 
 % \vspace{-.1in}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Experience}
-% \begin{tabular}{rp{13.3cm}}
-\begin{tabular}{p{3.2cm}p{13.1cm}}
 
- \textsc{Feb 2017 - Dec 2018}& \textbf{Bilbao Dynamics} - Bilbao (Spain)\href{https://bilbaodynamics.com/}{\hfill | \footnotesize bilbaodynamics.com}\\
- & Engineer and Teacher \\ 
- & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
- \vspace{-0.1in}
- \item Non-profit organization that teaches electronics, robotics, and programming
- \item Organized multiple courses and volunteered in teaching diverse knowledge areas
- \item Designed and developed software that helped the organization gain awareness and ease education
 
- \end{itemize}} \vspace{-0.09in} \\ 
-
- \textsc{Jun 2016 - Sep 2017}& \textbf{Noisewatch Project Team} - Bilbao (Spain)\href{http://noise.watch}{\hfill | \footnotesize www.noise.watch}\\
- & Software Engineer \\
- & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
- \vspace{-0.1in}
- \item Multidisciplinary team hired by city council for reducing noise pollution
- \item Directed the software team and designed complete solution for the device
- \item Assisted the hardware team in noise measurement signal processing
- \item Achieved new technical skills and trained myself to work in professional engineering environments
- \end{itemize}} \\
-
-%  \textsc{}& \textbf{Favorite Personal Projects} \\
-%  & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
-%  \vspace{-0.1in}
-%  \item Developed a free video and music downloader with over 3000 users - Maintained online since 2015
-%  \item Programmed a PIC16 microcontroller ROM flasher and memory viewer via serial port
-% %  \item Programmed a PIC16 microcontroller flasher and memory viewer
-% %  \item Designed and developed software that helped the organization gain awareness and ease education
-%  \end{itemize}} \\&\\
-\vspace{-.2in}
-\end{tabular}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
- \vspace{-.3in}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  \section{Skills}
 \begin{tabular}{r|l}
-\textsc{Languages} & Spanish, English, Basque, French (Basic) \\
-\textsc{Programming} & C, Java, Javascript (NodeJS), Bash, Python, VHDL, Matlab, Web Stack \\
 \textsc{Technologies} & Kubernetes, Amazon AWS, Pentesting, Networking, Linux, Blockchain  \\
-\textsc{Other Knowledge} & Electronics, Signal Processing, Office \\
+\textsc{Programming} & C, Java, Javascript (NodeJS), Bash, Python, VHDL, Matlab, Web Stack \\
+\textsc{Languages} & Spanish, English, Basque, French (Basic) \\
+\textsc{Other Knowledge} & Electronics, Signal Processing, Mobile Networks, Microsoft Office \\
 % \textsc{Hobbies} & Rubiks Cubes, Video Games, Roller Skating, Lan Parties
 \end{tabular}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Achievements}
+\begin{tabular}{rp{13.6cm}}
+% \begin{tabular}{p{3.2cm}p{13.1cm}}
+\textsc{Jan} 2019 & Extraordinary award by University of the Basque Country \\%\href{https://www.ehu.eus/documents/6810447/9245968/2018+03+20+NdP+Entrega+diplomas+2018.pdf/fe66cb16-e67b-8cb0-01ca-73fe373ce92c}{\hfill | \footnotesize Press report}\\
+&\footnotesize{Agreed by governing council and director for outstanding performance in Telecommunications's degree} \\\vspace{-0.05in}&\\
+
+\textsc{Mar} 2018 & \textbf{Rank \#1} in Bachelor's Degree in Telecommunications Engineering \\%\href{https://www.ehu.eus/documents/6810447/9245968/2018+03+20+NdP+Entrega+diplomas+2018.pdf/fe66cb16-e67b-8cb0-01ca-73fe373ce92c}{\hfill | \footnotesize Press report}\\
+&\footnotesize{Achieved highest promotion score of 10/10 | Obtained special honors in 18 courses \& Thesis} \\\vspace{-0.05in}&\\
+
+\textsc{Jul} 2017 & Honors in Bachelor's Thesis with a score of 10 \\% \href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
+% & \footnotesize{Thesis: \emph{``Analysis and implementation of real-time machine learning models in}} \\
+% & \footnotesize{ \hspace{10mm}\emph{ Big Data platforms and sensible to concept drift}'' }\\\vspace{-0.05in}&\\
+\vspace{-0.05in}&\\
+
+\textsc{Jul} 2017 & Bizkaia Talentia Program Certification \\% \href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
+\vspace{-0.05in}&\\
+% & \footnotesize{Participated in the Bizkaia Talentia Program (2016-2017), targeted at undergraduate seniors \newline with an excellent academic record and other skills identified and evaluated by university authorities} \\\vspace{-0.05in}&\\
+% & \footnotesize{Targeted at the students who living in Biscay with the highest potential at the three Basque universities} \\&\\
+
+2014 | 2016 | 2017 | 2018 & IDOM Prize for the best academic records in Engineering School\\% \href{https://www.elcorreo.com/bizkaia/alumnos-sobresalientes-20180116213541-nt.html}{\hfill | \footnotesize Press report}\\
+&\footnotesize{Four times awarded the special prize for achieving the highest grades} \\
+\end{tabular}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Projects}
 \begin{tabular}{p{1.5cm}p{14.8cm}}
 
-  Jul 2019 & \emph{``Study of on-premises Kubernetes deployment for university } \hfill \footnotesize{| Illinois Institute of Technology} \\
-  & \hspace{0.1mm} \emph{cloud infrastructure``} \hfill \footnotesize{MSc. Thesis} \\
+  Jul 2019 & \emph{``Analysis of Microservices software architecture on Kubernetes: } \hfill \footnotesize{| Illinois Institute of Technology} \\
+  & \hspace{0.1mm} \emph{Monolithic migration, design choices, best practices and applications``} \hfill \footnotesize{MSc. Thesis} \\
   % & \footnotesize{University of the Basque Country} \\
   & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
   \vspace{-0.1in}
   % \item Research Thesis at University of the Basque Country
   % \item Implemented algorithm to early detect and adapt to concept drift
-  \item Study of viability and deployment of multi-node Kubernetes cluster on university's datacenter
+  \item Study of microservices software architecture and the path and challenges to transition 
   \end{itemize}} \vspace{-0.1in} \\ 
 
   % May 2015 & \textbf{MusicBOO} | Multiplatform music and video downloader \href{http://musicboo.hontzakdio.com/}{\hfill | \footnotesize musicboo.hontzakdio.com}\\
@@ -266,12 +315,19 @@ ItalicFont = Fontin-Italic.otf
   \item Designed three-tier cluster infrastructure using Kafka, Spark \& Redis to preprocess before ML
   \end{itemize}} \vspace{-0.1in} \\ 
 
+ Aug 2019 & \textbf{kube\_autojob} | Kubernetes Jobs Scheduler \\
+ & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
+ \vspace{-0.1in}
+ \item Invented a solution to leverage the Kubernetes scheduler to run hundreds of parallel independent jobs
+ \item Works by instructing Kubernetes to run multiple job instances with parametrized env variables and cli params
+%  \item Implemented server node and two independent clients (webapp and Raspberry PI)
+ \end{itemize}} \vspace{-0.1in} \\ 
+
  May 2017 & \textbf{notMAIL} | Message and Notifications delivery protocol \\
  & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
  \vspace{-0.1in}
  \item Invented email replacement focused on notifications managed by user controlled subscriptions
- \item Designed protocol specification and communications API
- \item Programmed multiple API libraries for different languages
+ \item Designed protocol specification and communications API | Designed multiple API libraries for different languages
 %  \item Implemented server node and two independent clients (webapp and Raspberry PI)
  \end{itemize}} \vspace{-0.1in} \\ 
 
@@ -296,12 +352,12 @@ ItalicFont = Fontin-Italic.otf
 %  \item Allowed to spectate games when that feature was not available in the official client
 %  \end{itemize}} \\
 
-%  Nov 2018 & \textbf{SSM} | Server management tool for sysadmins (university course project)\\
-%  & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
-%  \vspace{-0.1in}
-%  \item Facilitates reporting multiple servers or IOT devices' status from central platform 
-%  \item Allows to send batch commands and gather information from a list of servers
-%  \end{itemize}} \\
+ Nov 2018 & \textbf{SSM} | Server management tool for sysadmins (university course project)\\
+ & \footnotesize{ \begin{itemize}[noitemsep,topsep=3pt]
+ \vspace{-0.1in}
+ \item Facilitates reporting multiple servers or IOT devices' status from central platform 
+ \item Allows to send batch commands and gather information from a list of servers
+ \end{itemize}} \\
 
 %  \textbf{musicBOT}& Two wheel programmable robot\\
 %  & \footnotesize{ \begin{itemize}[noitemsep,topsep=-10pt]
@@ -313,29 +369,5 @@ ItalicFont = Fontin-Italic.otf
 \end{tabular}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Achievements}
-\begin{tabular}{rp{13.6cm}}
-% \begin{tabular}{p{3.2cm}p{13.1cm}}
-\textsc{Jan} 2019 & Extraordinary award by University of the Basque Country \\%\href{https://www.ehu.eus/documents/6810447/9245968/2018+03+20+NdP+Entrega+diplomas+2018.pdf/fe66cb16-e67b-8cb0-01ca-73fe373ce92c}{\hfill | \footnotesize Press report}\\
-&\footnotesize{Agreed by governing council and director for outstanding performance in Telecommunications's degree} \\\vspace{-0.05in}&\\
-
-\textsc{Mar} 2018 & \textbf{Rank \#1} in Bachelor's Degree in Telecommunications Engineering \\%\href{https://www.ehu.eus/documents/6810447/9245968/2018+03+20+NdP+Entrega+diplomas+2018.pdf/fe66cb16-e67b-8cb0-01ca-73fe373ce92c}{\hfill | \footnotesize Press report}\\
-&\footnotesize{Achieved highest promotion score of 10/10 | Obtained special honors in 18 courses} \\\vspace{-0.05in}&\\
-
-\textsc{Jul} 2017 & Honors in Bachelor's Thesis with a score of 10 \\% \href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
-% & \footnotesize{Thesis: \emph{``Analysis and implementation of real-time machine learning models in}} \\
-% & \footnotesize{ \hspace{10mm}\emph{ Big Data platforms and sensible to concept drift}'' }\\\vspace{-0.05in}&\\
-\vspace{-0.05in}&\\
-
-\textsc{Jul} 2017 & Bizkaia Talentia Program Certification \\% \href{https://addi.ehu.es/handle/10810/23285?show=full}{\hfill | \footnotesize Description}\\
-\\
-% & \footnotesize{Participated in the Bizkaia Talentia Program (2016-2017), targeted at undergraduate seniors \newline with an excellent academic record and other skills identified and evaluated by university authorities} \\\vspace{-0.05in}&\\
-% & \footnotesize{Targeted at the students who living in Biscay with the highest potential at the three Basque universities} \\&\\
-
-2014 | 2016 | 2017 | 2018 & IDOM Prize for the best academic records in Engineering School\\% \href{https://www.elcorreo.com/bizkaia/alumnos-sobresalientes-20180116213541-nt.html}{\hfill | \footnotesize Press report}\\
-&\footnotesize{Four times awarded the special prize for achieving the highest grades} \\
-\end{tabular}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \end{document}
